# routes/index.js
@@ -3,6 +3,7 @@ const router = new Router()
 
 const attribute_groupRouter = require('./attribute_groupRouter')
 const attributeRouter = require('./attributeRouter')
+const cartRouter = require('./cartRouter')
 const categoryRouter = require('./categoryRouter')
 const image_commentRouter = require('./image_commentRouter')
 const order_addressRouter = require('./order_addressRouter')
@@ -17,6 +18,7 @@ const user_profileRouter = require('./user_profileRouter')
 
 router.use('/attribute', attributeRouter)
 router.use('/attribute_group', attribute_groupRouter)
+router.use('/cart', cartRouter)
 router.use('/category', categoryRouter)
 router.use('/image_comment', image_commentRouter)
 router.use('/order_address', order_addressRouter)
